# yave

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  example.gdextension  example.gdextension.uid  main.gd  main.gd.uid  main.tscn  readme.md  test_base.gd  test_base.gd.uid
gdextension/: CMakeLists.txt
